# merge_pdfs

./: README.md  pyproject.toml
merge_pdfs/: merge_pdfs.py
